--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
 }
 
 .mainText {
-    color: #9ed2faa2;
+    color: #eef2f5a1;
     margin: 0 auto;
     text-align: center;
     font-size: 9rem;
@@ -15,7 +15,6 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     animation: fadeIn 5s;
     -webkit-animation: fadeIn ease 5s;
-    border: 2px solid rgba(255, 255, 255, 0.918);
     border-radius: 10px;
     padding-bottom: 20px;
     width: 825px;
@@ -36,12 +35,20 @@
  }
 
  .subText {
-    color: #9ed2fad8;
+    color: #eef2f5c9;
     margin: 0 auto;
     text-align: center;
     font-family: cursive;
     padding: 1.5rem;
-    border: 2px solid rgba(255, 255, 255, 0.918);
     border-radius: 10px;
     width: 775px;
- }  
+ } 
+
+ .rocket {
+   position: relative;
+   animation: animate .2s ease infinite;
+   margin: 0 auto;
+   display: flex;
+   top: 100px;
+   cursor: pointer;
+ }
