--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -121,25 +121,5 @@
     top: 225px;
  }
 
- .slideshowContainer {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    width: 10%;
-    /* border: 1.6px solid #eef2f548; */
- }
+ @import "react-slideshow-image/dist/styles.css";
 
- .fade {
-   animation-name: fade;
-   animation-duration: 1.5s;
- }
- 
- @keyframes fade {
-   from {opacity: .4} 
-   to {opacity: 1}
- }
- 
- .myslidesHidden {
-   animation: fade ease 3s;
-   -webkit-animation: fade ease 3s;
- }
