--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,15 @@
     color: #000000b4;
     margin: 0 auto;
     text-align: center;
-    font-size: 8rem;
+    font-size: 6.5rem;
     font-style: italic;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* animation: fadeIn 5s; */
     /* -webkit-animation: fadeIn ease 5s; */
-    padding-bottom: 20px;
-    width: 825px;
+    padding-bottom: 17px;
+    width: 750px;
+    position: relative;
+    bottom: 20px;
 }
 @-webkit-keyframes fadeIn {
     0% {opacity: 0;}
@@ -41,19 +43,47 @@
     padding: 1.5rem;
     border-radius: 10px;
     width: 690px;
-    font-size: 1.345rem;
+    font-size: 15px;
+    position: relative;
+    bottom: 27px;
  } 
 
  .rocket {
     position: relative;
-    animation: animate .2s ease infinite;
     margin: 0 auto;
     display: flex;
-    top: 100px;
+    top: 55px;
     cursor: pointer;
-    height: 150px;
-    width: 80px;
- }
+    height: 300px;
+    width: 300px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+	  transform: scale(1);
+	  animation: pulse 2s infinite;
+    border-radius: 50%;
+}
+
+.rocket:hover {
+    animation: none;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.75);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(0.80);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.83);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
 
  .whatIs {
     color: #eef2f5c9;
@@ -89,7 +119,7 @@
     margin: 0 auto;
     display: flexbox;
     width: 75%;
-    border: 1.6px solid #eef2f548;
+    border: 1.6px solid #8022ac;
     height: 360px;
     border-radius: 10px;
     flex-direction: row;
@@ -142,38 +172,40 @@
  .pirate {
    margin: 0 auto;
    display: flex;
-   width: 110px;
-   height: 110px;
-   left: 105px;
+   height: 105px;
+   width: 105px;
+   left: 92px;
    position: relative;
  }
 
  .merchant {
    margin: 0 auto;
    display: flex;
-   height: 110px;
-   width: 110px;
-   left: 394px;
+   height: 105px;
+   width: 105px;
+   left: 391px;
    position: relative;
  }
 
  .explorer {
    margin: 0 auto;
    display: flex;
-   height: 110px;
-   width: 110px;
-   left: 719px;
+   height: 105px;
+   width: 105px;
+   left: 722px;
    position: relative;
  }
 
  .rainbow {
-   width: 700px;
-   height: 300px;
+   width: 680px;
+   height: 275px;
    border-radius: 10px;
    padding: 2rem;
    margin: auto;
    display: grid;
    place-content: center;
+   top: 6px;
+   position: relative;
    text-align: center;
    font-size: 1.5em;
    --border-size: 0.3rem;
