--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -160,6 +160,7 @@
   position: relative;
   bottom: 55px;
   font-style: oblique;
+  right: 28px;
 }
 
 .main p {
@@ -169,6 +170,7 @@
   width: 100%;
   position: relative;
   bottom: 55px;
+  right: 28px;
 }
 
 .mainContainer {
@@ -178,6 +180,7 @@
   height: 40%;
   background-color: rgba(0, 0, 0, 0.63);
   position: relative;
+  bottom: 25px;
 }
 
 .mainRight {
@@ -198,6 +201,7 @@
   height: 100%;
   position: relative;
   z-index: 1;
+  
 }
 
 .ufo {
@@ -243,18 +247,20 @@
   color: #ffffff;
   display: flex;
   flex-direction: row;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
   bottom: 80px;
+  right: 29px;
 }
 
 .featureContainer {
   border: #fff 1px solid;
   padding: 6rem;
   width: 100%;
-  height: 400px;
+  height: 475px;
   position: relative;
   overflow-y: hidden;
   overflow-x: hidden;
+  top: 32px;
 }
 
 .planet img {
@@ -285,7 +291,7 @@
   position: relative;
   width: 100%;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgba(63, 4, 75, 0.418);
   border: #fff 1px solid;
   padding: .5rem;
   bottom: 20px;
@@ -295,7 +301,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  top: 30px;
+  top: 5px;
   right: 220px;
   overflow-x: hidden;
 }
