--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -19,14 +19,14 @@
     display: flex;
     flex-direction: row;
     z-index: 1;
-    bottom: 700px;
+    bottom: 810px;
     right: 40px;
 }
 
 .video {   
     object-fit: fill;   
     width: 1950px;
-    height: 650px;
+    height: 750px;
     position: relative;
     right: 100px;
     z-index: -1;
@@ -34,3 +34,62 @@
     overflow-y: hidden;
     bottom: 100px;
   }
+
+.mainContainer {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    height: 1000px;
+    overflow-y: hidden;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.teamContainer {
+    padding: 6rem;
+    width: 100%;
+    height: 535px;
+    position: relative;
+    overflow-y: hidden;
+}
+
+.teamTextBox {
+    position: relative;
+    border: #fff 1px solid;
+    height: 430px;
+    width: 430px;
+    z-index: 1;
+    bottom: 800px;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+}
+
+.teamTextBox img {
+    position: relative;
+    z-index: 1;
+    object-fit: contain;
+    width: 430px;
+}
+
+.teamTextBox2 {
+    position: relative;
+    border: #fff 1px solid;
+    height: 430px;
+    width: 430px;
+    z-index: 1;
+    bottom: 1600px;
+    left: 1200px;
+    display: flex;
+    flex-direction: column; 
+    justify-content: right;
+    align-items: right;
+}
+
+.teamTextBox2 img {
+    position: relative;
+    z-index: 1;
+    object-fit: contain;
+    width: 430px;
+}
