--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -6,5 +6,6 @@
     justify-content: center;
     align-items: center;
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    flex-direction: column;
 }
