--- a/styles/Features.module.css
+++ b/styles/Features.module.css
@@ -1,73 +1,264 @@
-  .featureTitle {
-    font-size: 3rem;
-    font-weight: 400;
-    width: 100%;
-    text-align: left;
-    justify-content: left;
-    align-items: left;
-    position: relative;
-    font-style: oblique;
-    color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    bottom: 80px;
-    right: 29px;
-  }
+.featureTitle {
+  font-size: 3rem;
+  font-weight: 400;
+  width: 100%;
+  text-align: left;
+  justify-content: left;
+  align-items: left;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  bottom: 80px;
+  right: 29px;
+}
   
-  .mainContainer {
-    border: #fff 1px solid;
-    padding: 6rem;
-    width: 100%;
-    height: 475px;
-    position: relative;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    top: 32px;
-    display: flex;
-    flex-direction: column;
-  }
+.mainContainer {
+  border: #fff 1px solid;
+  padding: 6rem;
+  width: 100%;
+  height: 650px;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  top: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 240px;
+}
 
-  .planet img {
-    position: relative;
-    z-index: -1;
-    object-fit: contain;
-  }
+.planet img {
+  position: relative;
+  z-index: -1;
+  object-fit: contain;
+}
 
-  .featureContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 80%;
-    width: 100%;
-    margin: 0 auto;
-    color: #fff;
-    position: relative;
-  }
+.featureContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 100%;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 100px;
+  right: 70px;
+}
 
-  .feature {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: 200px;
-    position: relative;
-    z-index: 1;
-    border: 1px solid #fff;
-    border-radius: 6px;
-    background-color: rgba(0, 0, 0, 0.63);
-  }
+.feature {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 370px;
+  height: 390px;
+  position: relative;
+  z-index: 1;
+  margin-right: 50px;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0, 0.63);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  padding: 6px;
+}
 
-  .feature h3 {
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    font-style: oblique;
-    color: #ffffff;
-  }
+.feature h3 {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 50px;
+}
 
+.featureImage {
+  position: relative;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  bottom: 35px;
+}
+
+.featureImage img {
+  position: relative;
+  z-index: 1;
+}
+
+.featureImage2 {
+  position: relative;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px;
+  bottom: 48px;
+}
+
+.feature p {
+  font-size: .9rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 30px;
+}
+
+.feature2 p {
+  font-size: .9rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 60px;
+}
+
+
+.feature2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 370px;
+  height: 390px;
+  position: relative;
+  z-index: 1;
+  margin-right: 50px;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0, 0.63);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  padding: 6px;
+}
+
+.feature2 h3 {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 60px;
+}
+
+.feature3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 370px;
+  height: 390px;
+  position: relative;
+  z-index: 1;
+  margin-right: 50px;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0, 0.63);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  padding: 6px;
+}
+
+.feature3 h3 {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 60px;
+}
+
+.feature3 p {
+  font-size: .9rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 40px;
+}
+
+.featureImage3 {
+  position: relative;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  bottom: 45px;
+}
+
+.featureImage4 {
+  position: relative;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  bottom: 48px;
+}
+
+.feature4 h3 {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 59px;
+}
+
+.feature4 p {
+  font-size: .9rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  bottom: 40px;
+}
+
+.feature4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 370px;
+  height: 390px;
+  position: relative;
+  z-index: 1;
+  margin-right: 50px;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0, 0.63);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  padding: 6px;
+}
